# macolinux-dspext

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/macolinux-uc-core/: Cargo.toml
crates/macolinux-uc-core/src/: companion.rs  lib.rs  opack.rs  pairing_stream.rs  pairsetup.rs  pairverify.rs  rapport.rs  stream.rs  tlv8.rs
crates/macolinux-ucd/: Cargo.toml
crates/macolinux-ucd/src/: ble.rs  identity.rs  input.rs  main.rs  mdns.rs  pairing.rs  relay.rs  serve.rs  stream_server.rs
nix/: module.nix  package.nix
research/: README.md
research/docs/: protocol-notes.md
research/macolinux_dspext/: __init__.py  pairverify.py  rapport.py  tlv8.py
research/tests/: test_rapport.py
research/tools/: ble-continuity-advertise.py  capture-universal-control.sh  companion-service-probe.m  companionlink-mdns-peer.py  continuity-inspect.m  macos-input-forwarder.m  network-actor-framer-probe.m  network-endpoint-c-probe.c  opack-tool.m  rapport-frame-dump.py  tlv8-tool.py  uc-pcap-summary.py
scripts/: fistel-session.sh
