[package]
name = "macolinux-uc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "macolinux_uc_core"
path = "src/lib.rs"

[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.2.0"
hkdf = "0.12.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.9"
sha2_011 = { package = "sha2", version = "0.11.0" }
srp = "0.7.0-rc.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
