[package]
name = "macolinux-ucd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "macolinux-ucd"
path = "src/main.rs"

[dependencies]
macolinux-uc-core = { path = "../macolinux-uc-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
socket2 = "0.6.3"
